Minor fixes.