@@ -33,18 +33,6 @@
                         <artifactId>maven-antrun-plugin</artifactId>
                         <executions>
                             <execution>
-                                <id>Move module-info.java out</id>
-                                <phase>initialize</phase>
-                                <configuration>
-                                    <target>
-                                        <move file="src/main/java/module-info.java" todir="src/main"/>
-                                    </target>
-                                </configuration>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                            </execution>
-                            <execution>
                                 <id>Remove old APIDoc files</id>
                                 <phase>prepare-package</phase>
                                 <configuration>
@@ -52,18 +40,6 @@
                                         <delete quiet="true" includeEmptyDirs="true">
                                             <fileset dir="${javadoc.outputDirectory}"/>
                                         </delete>
-                                    </target>
-                                </configuration>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>Move module-info.java back</id>
-                                <phase>verify</phase>
-                                <configuration>
-                                    <target>
-                                        <move file="src/main/module-info.java" todir="src/main/java"/>
                                     </target>
                                 </configuration>
                                 <goals>
@@ -79,7 +55,6 @@
             <id>Javadoc-std</id>
             <properties>
                 <javadoc.linksource>true</javadoc.linksource>
-                <!--<javadoc.outputDirectory></javadoc.outputDirectory>-->
                 <javadoc.attach>false</javadoc.attach>
                 <javadoc.skip>false</javadoc.skip>
             </properties>
@@ -87,7 +62,6 @@
         <profile>
             <id>Javadoc-std-attached</id>
             <properties>
-                <!--<javadoc.outputDirectory></javadoc.outputDirectory>-->
                 <javadoc.skip>false</javadoc.skip>
             </properties>
         </profile>
@@ -629,13 +603,6 @@
                 </includes>
             </resource>
             <resource>
-                <directory>src/main/resources</directory>
-                <filtering>false</filtering>
-                <excludes>
-                    <exclude>**/pom.properties</exclude>
-                </excludes>
-            </resource>
-            <resource>
                 <directory>
                     src/uml
                 </directory>
@@ -672,10 +639,6 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <showDeprecation>true</showDeprecation>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                        <!--<arg>-Xlint:all</arg>-->
-                    </compilerArgs>
                 </configuration>
             </plugin>
 
@@ -744,7 +707,7 @@
                     <outputDirectory>${javadoc.outputDirectory}</outputDirectory>
                     <tags>
                         <tag>
-                            <name>Note</name>
+                            <name>note</name>
                             <placement>a</placement>
                             <head>Note:</head>
                         </tag>
@@ -857,8 +820,6 @@
                             <goal>prepare-agent</goal>
                         </goals>
                         <configuration>
-                            <!-- Sets the path to the file which contains the execution data. -->
-                            <destFile>${jacoco.ut.execution.data.file}</destFile>
                             <!--
                                 Sets the name of the property containing the settings
                                 for JaCoCo runtime agent.
@@ -877,9 +838,6 @@
                             <goal>report</goal>
                         </goals>
                         <configuration>
-                            <!-- Sets the path to the file which contains the execution data. -->
-                            <dataFile>${jacoco.ut.execution.data.file}</dataFile>
-                            <!-- Sets the output directory for the code coverage report. -->
                             <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
                         </configuration>
                     </execution>
@@ -937,7 +895,7 @@
                     <!--<outputDirectory>${javadoc.outputDirectory}</outputDirectory>-->
                     <tags>
                         <tag>
-                            <name>Note</name>
+                            <name>note</name>
                             <placement>a</placement>
                             <head>Note:</head>
                         </tag>
